# agent-skills

./: AGENTS.md  README.md
.github/workflows/: skills-ci.yml
skills/code-writing/: AGENTS.md  README.md  SKILL.md  metadata.json
skills/code-writing/references/: _sections.md  _template.md  architecture-dependency-direction.md  architecture-fitness-functions.md  architecture-functional-core-imperative-shell.md  composition-front-load-intent.md  composition-why-not-what-comments.md  descriptors-adrs-for-non-obvious-decisions.md  descriptors-agents-md-tiered.md  gates-strong-oracles-and-agent-comprehension.md  gates-type-check-and-lint.md  graph-acyclic-explicit-surfaces.md  graph-folder-as-module.md  identifiers-canonical-consistency.md  identifiers-descriptive-names.md  monorepo-affected-graph-as-agent-context.md  monorepo-per-package-tiered-descriptors.md  monorepo-tagged-package-boundaries.md  sizing-function-and-file-bounds.md  sizing-token-budget-and-context-rot.md  types-narrow-api-surfaces.md  (+2 more)
skills/codex-duo/: .gitignore  README.md  SKILL.md  pyproject.toml
skills/codex-duo/assets/: default_nudges.json
skills/codex-duo/assets/prompts/: proponent.md
skills/codex-duo/codex_duo/: __init__.py
skills/codex-duo/codex_duo/prompts/: socratic.md
skills/codex-duo/evals/: evals.json
skills/codex-duo/scripts/: codex_duo.py
skills/duke-dependency-generator/: README.md  SKILL.md  metadata.json
skills/refactoring-playbook/: AGENTS.md  README.md  SKILL.md  metadata.json
skills/shared-ontologies/: AGENTS.md  README.md  SKILL.md  metadata.json
(+47 files in other folders)
